syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package spotify;

service NewReleasesService {
  // Отримання нових випусків за країною та лімітом Кожен rpc визначення в .proto файлі означає одну операцію, яку можна викликати через мережу.
  rpc GetNewReleases (GetNewReleasesRequest) returns (AlbumsResponse) {
    option (google.api.http) = {
      get: "/v1/browse/new-releases"
      additional_bindings {
        get: "/v1/browse/new-releases?limit={limit}&offset={offset}"
      }
    };
  }
}

// Запит для отримання нових випусків
message GetNewReleasesRequest {
  string country_code = 1;
  int32 limit = 2;
  int32 offset = 3;
  
}

message Image {
  int32 height = 1;
  string url = 2;
  int32 width = 3;
}
// Модель альбому
message Album {
  string album_id = 1;                      // Ідентифікатор альбому, використовується в якості ключа
  string album_name = 2;                   // Назва альбому
  string album_type = 3;                   // Тип альбому (наприклад, single або album)
  int32 total_tracks = 4;                  // Загальна кількість треків
  string artist = 5;                       // Імена артистів, об'єднані через кому
  string date = 6;                         // Дата (рядок)
  string image_url = 7;                    // URL головного зображення
  string linq_url = 8;                     // URL посилання на Spotify
  repeated Image images = 9;               // Колекція зображень
}

// Відповідь, яка містить список альбомів
message AlbumsResponse {
  repeated Album albums = 1;
}